--- a/RooStatsSim/UI/Equipment/EquipContext.xaml
+++ b/RooStatsSim/UI/Equipment/EquipContext.xaml
@@ -55,4 +55,14 @@
         <Setter Property="TextAlignment" Value="Left"/>
         <Setter Property="VerticalAlignment" Value="Top"/>
     </Style>
+
+    <Style TargetType="{x:Type TextBlock}" x:Key="GearText">
+        <Setter Property="Height" Value="8"/>
+        <Setter Property="Width" Value="30"/>
+        <Setter Property="Text" Value="{Binding Path=GearName}"/>
+        <Setter Property="FontSize" Value="8"/>
+        <Setter Property="Foreground" Value="Red"/>
+        <Setter Property="TextAlignment" Value="Left"/>
+        <Setter Property="VerticalAlignment" Value="Top"/>
+    </Style>
 </ResourceDictionary>
